# haruspex

./: AGENTS.md  CLAUDE.md  TODO.md  medical-literature-prompt.md
.claude/skills/astro-literature/: SKILL.md  examples.md  pyproject.toml  requirements.txt  subagent-instructions.md
.claude/skills/astro-literature/docs/: proposal-mode-architecture.md
.claude/skills/astro-literature/scripts/: ads_search.py  citation_analysis.py  classify_citations.py  db_backend.py  fetch_missing_abstracts.py  litdb.py  migrate_to_postgresql.py  object_literature.py  object_lookup.py  proposal_targets.py  reclassify_citations.py
